fix overflow style

--- a/apps/entry-app/src/app/components/agents/agent/agent.module.scss
+++ b/apps/entry-app/src/app/components/agents/agent/agent.module.scss
@@ -16,6 +16,7 @@
     bottom: 0;
     z-index: 10;
     max-width: unset;
+    overflow: auto;
   }
 
   &-header {
